2010-04-12  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use spaces for "ci -k" support.

	* rcskeep.c (sorry): New static func.
	(badly_terminated): Use `sorry'; also, take `savep', if set,
	finish and then brush off the partially constructed string.
	(get0val): Save directly to `SINGLE'; return `char *';
	don't take `struct buf *'; instead take `bool savep'.
	(keepid): Return `char *'; don't take `struct buf *'.
	(getval): Return `char *'; don't take `struct buf *';
	instead take `bool savep'.
	(keepdate): Use `SHARED' temporarily for date and time strings.
	(checknum): Incorporate into unique caller.
	(keeprev): Return `char *'; set `PREV (rev)' directly.
	(getoldkeys): Don't keep local `struct buf' objects;
	use strings saved in `SINGLE' and `PREV (foo)' directly.

2010-04-12  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Re{name,base} abstraction from `ftalloc' to `FALLOC'.

	* b-divvy.h (FALLOC): New macro.
	* rcs.c: #include "b-divvy.h".
	(doaccess): Use `FALLOC'.
	* rcsedit.c (addlock, addsymbol): Likewise.
	* rcslex.c (lookup): Likewise.
	* rcsrev.c: #include "b-divvy.h".
	(store1): Use `FALLOC'.
	* rcssyn.c: #include "b-divvy.h".
	(getadmin, getdelta): Use `FALLOC'.
	* rcsutil.c (ftestalloc): Delete func.
	* rlog.c: #include "b-divvy.h".
	(getnumericrev): Use `FALLOC'.
	* base.h (ftestalloc): Delete func decl.
	(ftalloc): Delete macro.

2010-04-12  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Use `obstack_free' more.

	* b-divvy.c (brush_off) [DEBUG]: Display info to stderr.
	(forget, close_space): Use `obstack_free' directly.

2010-04-12  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstractions: zlloc, ZLLOC

	* b-divvy.h (zlloc): New func decl.
	(ZLLOC): New macro.
	* b-divvy.c (zlloc): New func.
	* maketime.c: Don't #include <string.h>.
	(init_maketimestuff): Use `ZLLOC'.
	* rcsedit.c (ensure_editstuff): Likewise.
	* rcsfnms.c (init_fnstuff): Likewise.
	* rcslex.c (fd2_RILE): Likewise.
	* rcsutil.c (gnurcs_init): Likewise.
